# clawless

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  .yamllint.yaml  CHANGELOG.md  Cargo.toml  Earthfile  README.md  justfile  zizmor.yml
.earthly/github/: Earthfile
.earthly/markdown/: Earthfile
.earthly/prettier/: Earthfile
.earthly/rust/: Earthfile
.earthly/toml/: Earthfile
.flox/: env.json
.flox/env/: manifest.toml
.github/: labelflair.toml  renovate.json5
.github/workflows/: ci.yml  dependencies.yml  docs.yml  github.yml  labelflair.yml  publish.yml  release.yml
crates/clawless/: Cargo.toml  README.md
crates/clawless-cli/: Cargo.toml  README.md  build.rs
crates/clawless-cli/src/: app.rs  commands.rs  input.rs  main.rs  new.rs
crates/clawless-cli/src/commands/: generate.rs  mod.rs  new.rs
crates/clawless-cli/src/commands/generate/: command.rs
crates/clawless-cli/src/commands/new/: subcommand.rs
crates/clawless-cli/src/input/: command_name.rs
crates/clawless-cli/src/new/: subcommand.rs
crates/clawless-cli/tests/: commands.rs
crates/clawless-cli/tests/commands/: generate.toml  help.stdout  help.toml  new.stderr  new.stdout  new.toml  subcommand.stdout  subcommand.toml
crates/clawless-cli/tests/commands/generate.in/: Cargo.toml
crates/clawless-cli/tests/commands/generate.in/src/commands/: greet.rs
crates/clawless-cli/tests/commands/generate.out/src/: commands.rs
crates/clawless-cli/tests/commands/generate.out/src/commands/: greet.rs
crates/clawless-cli/tests/commands/generate.out/src/commands/greet/: shout.rs
crates/clawless-cli/tests/commands/new.out/cli/: Cargo.toml
crates/clawless-cli/tests/commands/new.out/cli/src/: commands.rs  main.rs
crates/clawless-cli/tests/commands/new.out/cli/src/commands/: greet.rs
crates/clawless-derive/: Cargo.toml  README.md
crates/clawless-derive/src/: app.rs  command.rs  inventory.rs  lib.rs
crates/clawless-derive/src/app/: params.rs
crates/clawless/src/: context.rs  error.rs  lib.rs
crates/clawless/src/context/: command.rs  current_working_directory.rs  parameter.rs  provider.rs
docs/: README.md  docusaurus.config.ts  justfile  package-lock.json
docs/blog/: 2025-12-19-public-release.md  authors.yml  tags.yml
docs/docs/: introduction.md  manual-setup.md  quick-start.md  reference.md
docs/docs/concepts/: arguments.md  commands.md  context.md  conventions.md  index.md  macros.md  naming-conventions.md  project-structure.md
docs/docs/how-to/: access-working-directory.md  add-command-aliases.md  generate-commands.md  index.md  migrate-from-clap.md  organize-large-cli.md  require-subcommands.md  test-with-trycmd.md
docs/docs/tutorial/: arguments.md  error-handling.md  first-command.md  setup.md  subcommands.md
docs/src/pages/: index.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: commands.rs  greet.rs  main.rs
examples/hello-world/src/commands/: greet.rs
examples/hello-world/tests/: test.rs
src/: lib.rs
