[workspace]
members = ["crates/*", "examples/*"]

# Opt-in to the new feature resolver introduced in Rust 1.85 and Edition 2024.
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

license = "Apache-2.0 OR MIT"
repository = "https://github.com/aonyx-ai/clawless.git"

# typed-builder uses a if-let-chain, which was only stabilized in Rust 1.88.0
# https://github.com/rust-lang/rust/issues/53667
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0.14"
clap = { version = "4.3", features = ["cargo", "derive"] }
clawless = { path = "crates/clawless" }
inventory = "0.3"
getset = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
typed-builder = "0"
