[workspace]
members = ["crates/*", "examples/*"]

# Opt-in to the new feature resolver introduced in Rust 1.85 and Edition 2024.
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"

license = "Apache-2.0 OR MIT"
repository = "https://github.com/aonyx-ai/clawless.git"

# typed-builder uses an if-let-chain, which was only stabilized in Rust 1.88.0
# https://github.com/rust-lang/rust/issues/53667
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0.16"
clap = { version = "4.3", features = ["cargo", "derive"] }
clawless = { path = "crates/clawless" }
clawless-derive = { path = "crates/clawless-derive", version = "=0.3.0" }
darling = ">=0.21,<1"
getset = "0.1.6"
indoc = "2"
inventory = "0.3"
proc-macro2 = "1.0.86"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trycmd = ">=0.4,<1"
typed-builder = "0.23.2"
typed-fields = "0.6.0"
