[package]
name = "clawless-cli"
description = "Generate and develop CLIs with Clawless"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "clawless"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clawless = { workspace = true }
convert_case = { workspace = true }
getset = { workspace = true }
indoc = { workspace = true }
typed-builder = { workspace = true }
typed-fields = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
trycmd = { workspace = true }
