[package]
name = "clawless-derive"
description = "Derive macros for the Clawless CLI framework"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21"
proc-macro2 = "1.0.86"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["full"] }

[dev-dependencies]
indoc = "2.0.6"
