[package]
name = "clawless"
description = "A framework for building command-line applications"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clawless-derive = { path = "../clawless-derive", version = "=0.2.0" }
inventory = { workspace = true }
tokio = { workspace = true }
