[package]
name = "clawless"
description = "A framework for building command-line applications"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clawless-derive = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true }
